# leave-llm

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yaml  env.sample  leave_prompt.py  main.py  ollama_def.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: lint.yml
