[tool.poetry]
name = "olam"
version = "0.1.0"
description = ""
authors = ["sandeshit <thapasandesh56@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.12"
langchain-community = "^0.2.11"
langchain-core = "^0.2.28"
transformers = "^4.43.3"
datasets = "^2.20.0"
py7zr = "^0.21.1"
evaluate = "^0.4.2"
nltk = "^3.8.1"
absl-py = "^2.1.0"
pymongo = "^4.8.0"
fastapi = {extras = ["standard"], version = "^0.115.4"}
uvicorn = "^0.32.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
