[project]
name = "leave-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py>=2.2.2",
    "datasets>=3.5.1",
    "evaluate>=0.4.3",
    "fastapi>=0.115.12",
    "langchain>=0.2.17",
    "langchain-community>=0.3.23",
    "langchain-core>=0.3.57",
    "nltk>=3.9.1",
    "py7zr>=0.22.0",
    "pymongo>=4.12.1",
    "transformers>=4.51.3",
    "uvicorn>=0.34.2",
]
